# QtGLShader

./: CMakeLists.txt
QtGL/: GLShaders.cpp  GLWidget.cpp  GLWidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
ocl/: CLfunc.cpp  CLfunc.h
